--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "publint": "^0.3.9",
     "svelte": "^5.23.0",
     "typescript": "^5.3.2",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "vite-plugin-mkcert": "^1.17.8"
   },
   "keywords": [
     "svelte"
